fix: 'Read More' spacing

--- a/public/styles/blog.less
+++ b/public/styles/blog.less
@@ -168,5 +168,5 @@ pre > code {
 }
 
 .post--seperator {
-  height: 50px;
+  height: 15px;
 }
